# pws-collector

./: .env.example  .gitignore  Cargo.toml  LICENSE  README.md
config/: default.json  development.json  test.json
src/: database.rs  logger.rs  main.rs  models.rs  services.rs  settings.rs  test.rs
